Added base files
Uploaded index.html, stylesheet and icon

--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
-  <html>
-    <head>
-      <title>BitNet</title>
-    </head>
-    <body>
-    </body>
-  </html>
+    <html>
+        <head>
+            <title>BitNet</title>
+            <meta name="author" content="BitNet">
+            <meta name="description" content="The official website of BitNet">
+
+            <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
+            <link href='stylesheet.css' type='text/css' rel='stylesheet'>
+        </head>
+        <body>
+            <img id="icon" src='img/icon_circle.png' width="200" height="200">
+            <h1 class='title'>BitNet</h1>
+
+            <p class="title">Site isn't finished yet</p>
+        </body>
+    </html>
