--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
             <link href='stylesheet.css' type='text/css' rel='stylesheet'>
         </head>
         <body>
-            <img id="icon" src='img/icon_circle.png' width="200" height="200">
-            <h1 class='title'>BitNet</h1>
-
+            <header>
+                <img id="icon" src='img/icon_circle.png' width="200" height="200">
+                <h1 class='title'>BitNet</h1>
+            </header>
+            
             <p class="title">Site isn't finished yet</p>
         </body>
     </html>
