Changed img size

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </head>
         <body>
             <header>
-                <img id="icon" src='img/icon_circle.png' width="200" height="200">
+                <img id="icon" src='img/header.png' width="15%" height="15%">
                 <h1 class='title'>BitNet</h1>
             </header>
             
