--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </head>
         <body>
             <header>
-                <img id="icon" src='img/header.png' width="50%" height="50%">
+                <img id="icon" src='img/header.png' width=50% height=50%>
             </header>
             <hr>
             <p class="title">Site isn't finished yet</p>
