--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </head>
         <body>
             <header>
-                <img id="icon" src='img/header.png' width=75% height=75%>
+                <img id="icon" src='img/header.png'>
             </header>
             <hr>
             <p class="title">Site isn't finished yet</p>
