--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         </head>
         <body>
             <header>
-                <img id="icon" src='img/header.png'>
+                <img id="icon" src='img/header.png' width="597px" height="199px">
             </header>
             <hr>
             <p class="title">Site isn't finished yet</p>
