--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
                 <img id="icon" src='img/header.png' width="597px" height="199px">
             </header>
             <hr>
-            <p class="title">Site isn't finished yet</p>
+            <p class="title">Site under construction</p>
         </body>
     </html>
