--- a/index.html
+++ b/index.html
@@ -13,7 +13,22 @@
             <header>
                 <img id="icon" src='img/header.png' width="597px" height="199px">
             </header>
+
             <hr>
-            <p class="title">Site under construction</p>
+            
+            <div id="about">
+                <h1 class="title">About</h1>
+
+                <p>Some nerd who likes programming, anything to do with computers to be honest. Also enjoys the darkness that surrounds us all.<br>
+                In other words, I am alone.</p>
+            </div>
+
+            <hr>
+            <div id="contact">
+                <h1 class="title">Contact</h1>
+
+                <p>Your best bet is to send me a message on Discord @ BitNet#0392.<br>
+                There are no other bets.</p>
+            </div>
         </body>
     </html>
