--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
             <link href='https://fonts.googleapis.com/css?family=Alata' rel='stylesheet'>
             <link href='stylesheet.css' type='text/css' rel='stylesheet'>
-            <link rel='shortcut icon' href='img/icon.jpg' type="image/png">
+            <link rel='shortcut icon' href='img/icon.jpg' type="image/jpg">
         </head>
         <body>
             <header>
