--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         </head>
         <body>
             <header>
-                <img id="icon" src='img/header.jpg' width="597px" height="199px">
+                <img id="icon" src='img/header.png' width="597px" height="199px">
             </header>
 
             <hr>
