--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="contact">
                 <h1 class="title">Contact</h1>
 
-                <p>Your best bet is to send me a message on Discord @ BitNet#0392.<br>
+                <p>Your best bet is to send an email at bit@bitnet.dev<br>
                 There are no other bets.</p>
             </div>
         </body>
