Added gitignore Updated index.html to include email link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div id="contact">
                 <h1 class="title">Contact</h1>
 
-                <p>Your best bet is to send an email at bit@bitnet.dev<br>
+                <p>Your best bet is to send an <a href="mailto:bit@bitnet.dev">email</a>.<br>
                 There are no other bets.</p>
             </div>
         </body>
