Oh look, i changed the contact paragraph.

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <h1 class="title">About</h1>
 
             <p>Some nerd who likes programming, anything to do with computers to be honest. Also enjoys the darkness that surrounds us all.<br>
-            In other words, I am alone.</p>
+            Also doesn't like going outside.</p>
         </div>
 
         <hr>
         <div id="contact">
             <h1 class="title">Contact</h1>
 
-            <p>Your best bet is to send an <a href="mailto:bit@bitnet.dev">email</a>.<br>
-            There are no other bets.</p>
+            <p>Why on Earth would you want to contact me?.<br>
+            If you really want/have to, then send me an <a href="mailto:bit@bitnet.dev">email</a>.</p>
         </div>
     </body>
 </html>
